fix: css spacing

--- a/src/containers/Search/Collection/Collection.module.scss
+++ b/src/containers/Search/Collection/Collection.module.scss
@@ -14,4 +14,7 @@
       gap: rem(24);
     }
   }
+  &_resetRowGap {
+    row-gap: 0;
+  }
 }
