--- a/src/containers/Search/Items/Items.module.scss
+++ b/src/containers/Search/Items/Items.module.scss
@@ -3,6 +3,10 @@
     row-gap: rem(48);
   }
   &_project {
+    &:hover {
+      box-shadow: 0 2px 10px rgb(0 0 0 / 15%);
+      border-color: rgba(#1c1c1c, 0.3);
+    }
     [class*='projectCard_inner'] {
       padding: 0;
       border: none;
@@ -20,6 +24,10 @@
   }
 
   &_artist {
+    &:hover {
+      box-shadow: 0 2px 10px rgb(0 0 0 / 15%);
+      border-color: rgba(#1c1c1c, 0.3);
+    }
     [class*='_inner'] {
       background-color: $white-100;
     }
